--- a/philosopher/Makefile
+++ b/philosopher/Makefile
@@ -107,7 +107,7 @@ fclean: clean
 
 git: fclean
 ifeq ($(gcom), $(EMPTY))
-	echo dw  $(EMPTY)
+	echo dw  $(DATE)
 	git add .
 	git commit -m $(NAME)/$(DATE)
 else
